# rust-gpu-issue-index-vec2

./: .gitignore  AGENTS.md  Cargo.toml  README.md  build.rs  teminal_session.txt
kernels/: Cargo.toml
kernels/src/: lib.rs
src/: main.rs  vulkano_runner.rs
