[workspace]
resolver = "2"
members = ["kernels"]

[package]
name = "rust-gpu-issue-index-vec2"
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
spirv-std = { git = "https://github.com/rust-gpu/rust-gpu", branch = "main" }

[dependencies]
spirv-std = { workspace = true }

[build-dependencies]
spirv-builder = { git = "https://github.com/rust-gpu/rust-gpu", branch = "main" }

[workspace.lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = [
  'cfg(target_arch, values("spirv"))',
] }
