[workspace]
resolver = "2"
members = ["kernels"]

[package]
name = "rust-gpu-issue-index-vec2"
version = "0.1.0"
edition = "2021"

[features]
variable_pointers = []
variable_pointers_storage_buffer = []

[workspace.dependencies]
spirv-std = { git = "https://github.com/rust-gpu/rust-gpu", branch = "main", features = [
  "bytemuck",
] }

[dependencies]
spirv-std = { workspace = true }
vulkano = { version = "0.35.2" }


[build-dependencies]
spirv-builder = { git = "https://github.com/rust-gpu/rust-gpu", branch = "main" }

[workspace.lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = [
  'cfg(target_arch, values("spirv"))',
] }
